decrease header width and fix mobile spacing

--- a/src/styles/globalNav.css
+++ b/src/styles/globalNav.css
@@ -1,7 +1,7 @@
 /* Header */
 
 .logo-container {
-    padding: var(--spacing-80) 0 var(--spacing-40) var(--spacing-100);
+    padding: var(--spacing-80) 0 var(--spacing-40) var(--spacing-80);
 }
 
 .header-arrow-menu {
@@ -79,11 +79,19 @@
     line-height: 2rem;
     letter-spacing: 1.5px;
     color: var(--surface-secondary-text);
-    padding: var(--spacing-20) 0 var(--spacing-20) var(--spacing-100);
+    padding: var(--spacing-20) 0 var(--spacing-20) var(--spacing-80);
 }
 
 .header-link > .three-dots-vertical {
     position: absolute;
+    left: 40px;
+    width: 5px;
+    opacity: 0;
+    gap: 0px;
+    -webkit-transition: 300ms ease-out ;
+    -moz-transition: 300ms ease-out;
+    -o-transition: 300ms ease-out;
+    transition: 300ms ease-out;
 }
 
 .header-link:hover {
