--- a/src/styles/threeDots.css
+++ b/src/styles/threeDots.css
@@ -69,18 +69,6 @@
     align-items: center;
 }
 
-
-.header-link > .three-dots-vertical {
-    left: 60px;
-    width: 5px;
-    opacity: 0;
-    gap: 0px;
-    -webkit-transition: 300ms ease-out ;
-    -moz-transition: 300ms ease-out;
-    -o-transition: 300ms ease-out;
-    transition: 300ms ease-out;
-}
-
 /* Mobile, Tablet, Small Laptop*/
 @media screen and (max-width: 1200px) {
     .three-dots-vertical {
